split into two serverless functions

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -157,7 +157,7 @@
 <body>
     <div class="header-container">
         <h1>Automata Chatbot</h1>
-        <a class="button" href="{{ url_for('index') }}">Home</a>
+        <a class="button" href="/">Home</a>
         <a class="button" href="javascript:history.back()">Back</a>
     </div>
 
