--- a/templates/index.html
+++ b/templates/index.html
@@ -233,7 +233,7 @@
     <div class="landing-container">
         <h1>Welcome to Automata Theory Course</h1>
         <a class="button" href="{{ url_for('course_page') }}">Lessons</a>
-        <a class="button" href="{{ url_for('chat') }}">Chat</a>
+        <a class="button" href="/chat">Chat</a>
         <a class="button" href="{{ url_for('track_progress') }}">Track Progress</a>
         <!-- Logout button, handled by JavaScript -->
         <button class="button" onclick="logout()"
