--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             width: 300px;
             text-decoration: none;
             background-color: #4CAF50;
-            color: rgb(67, 67, 67);
+            color: rgb(86, 90, 87);
             border-radius: 10px;
             font-size: 18px;
             transition: background-color 0.3s;
@@ -231,13 +231,13 @@
     </div>
 
     <div class="landing-container">
-        <h1>Welcome to Automata Theory Course</h1>
+        <h1>Welcome to Automata ITS</h1>
         <a class="button" href="{{ url_for('course_page') }}">Lessons</a>
         <a class="button" href="/chat">Chat</a>
         <a class="button" href="{{ url_for('track_progress') }}">Track Progress</a>
         <!-- Logout button, handled by JavaScript -->
         <button class="button" onclick="logout()"
-            style="background-color: #F08080; color: black; font-style:italic;">Logout</button>
+            style="background-color: #F08080; color: rgb(54, 54, 54); font-style:italic;">Logout</button>
     </div>
 
     <script>
