--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -194,6 +194,18 @@ li {
     max-width: 80%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+.info-container {
+    margin: 20px auto;
+    max-width: 80%;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-left: 4px solid #32acaa;
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    font-size: 1rem;
+    color: #333;
+}
+
 
 
 /* progress styles */
